--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "6.5.0"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.15.3",
     "image-size": "^0.6.1"
   }
 }
